# sas-mcp-server

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Dockerfile  README.md  TROUBLESHOOTING.md  pyproject.toml  pytest.ini  run_tests.sh
.github/workflows/: ci.yml  docker-build.yml  integration.yml  publish-ghcr.yml
examples/: configuration.md  gemini-settings.json  mcp-http.json  mcp-stdio.json  register_mcp_client.py
examples/docker/: setup.md
scripts/: junit_to_summary.py
src/sas_mcp_server/: auth_login.py  config.py  env.py  exceptions.py  http_direct_server.py  main.py  mcp_server.py  prompts.py  stdio_server.py  telemetry.py  tools.py  usage_logger.py  viya_client.py  viya_utils.py
src/sas_mcp_server/helpers/: auto_ml_helpers.py  ml_helpers.py  report_authoring_helpers.py  report_export_helpers.py
src/sas_mcp_server/tools/: __init__.py  _access.py  _common.py  automl.py  compute.py  data_ops.py  decisioning.py  discovery.py  jobs.py  model_scoring.py  reports.py  workbench.py
tests/: conftest.py  test_auth_login.py  test_config.py  test_config_oauth.py  test_env.py  test_http_direct.py  test_integration.py  test_mcp_server.py  test_prompts.py  test_read_only.py  test_report_authoring_helpers.py  test_report_export_helpers.py  test_stdio_server.py  test_telemetry.py  test_tier_selection.py  test_tool_payloads.py  test_tools.py  test_usage_logger.py  test_viya_utils.py
