[project]
name = "sas-mcp-server"
version = "1.5.0"
description = "An MCP server for executing SAS code and querying Compute, CAS, and model APIs on SAS Viya via OAuth 2.0."
readme = "README.md"
authors = [{name = "SAS Institute Inc."}]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0.0",
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[project.scripts]
app = "sas_mcp_server.main:main"
app-stdio = "sas_mcp_server.stdio_server:main"
sas-mcp-login = "sas_mcp_server.auth_login:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.4",
]
# Writer used only to generate the binary .xlsx fixture for the upload_data
# Excel integration test. Without it that test importorskips.
# Install with: uv sync --group test-formats
test-formats = [
    "openpyxl>=3.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]
# Reference material (API specs, course samples, scratch scripts) is not project
# source and should not be linted.
extend-exclude = ["docs"]

[tool.ruff.lint]
# E/F: pyflakes + pycodestyle, I: isort, B: bugbear, UP: pyupgrade,
# G: logging-format, TRY: tryceratops, SIM: flake8-simplify.
select = ["E", "F", "I", "B", "UP", "G", "TRY", "SIM"]
ignore = [
    "TRY003",  # long messages in exceptions are fine for this CLI/server
    "TRY300",  # "move to else block" — noisy, low value here
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use broad excepts and don't need logging-format hygiene.
"tests/**" = ["G004", "B017", "TRY003"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
